🎨 Not set organism globally (#92)
Co-authored-by: Alex Wolf <f.alexander.wolf@gmail.com>

--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -41,10 +41,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -67,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt = lb.CellMarker.bionty()\n",
+    "cell_marker_bt = lb.CellMarker.bionty(organism=\"human\")\n",
     "cell_marker_bt"
    ]
   },
@@ -171,7 +168,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt = lb.CellMarker.bionty()\n",
     "cell_marker_bt.search(\"CD4\").head(5)"
    ]
   },
@@ -414,7 +410,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
