--- a/docs/cell_type.ipynb
+++ b/docs/cell_type.ipynb
@@ -39,10 +39,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -169,7 +166,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_type_bt = lb.CellType.bionty()\n",
     "cell_type_bt.search(\"CD8 positive T cell\").head(5)"
    ]
   },
@@ -293,7 +289,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
