--- a/docs/developmental_stage.ipynb
+++ b/docs/developmental_stage.ipynb
@@ -42,10 +42,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -204,7 +201,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "developmental_stage_bt = lb.DevelopmentalStage.bionty()\n",
     "developmental_stage_bt.search(\"organogenesis\").head(3)"
    ]
   },
@@ -326,7 +322,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
