--- a/docs/ethnicity.ipynb
+++ b/docs/ethnicity.ipynb
@@ -41,10 +41,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -203,7 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethnicity_bt = lb.Ethnicity.bionty()\n",
     "ethnicity_bt.search(\"American\").head(3)"
    ]
   },
@@ -344,7 +340,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
