--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -78,7 +78,7 @@
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
     "\n",
-    "lb.settings.organism = \"human\""
+    "lb.settings.organism = \"human\"  # globally set organism to human"
    ]
   },
   {
@@ -430,7 +430,7 @@
    "source": [
     "features = ln.Feature.lookup()\n",
     "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()"
+    "organisms = lb.Organism.lookup()"
    ]
   },
   {
@@ -622,7 +622,7 @@
    "outputs": [],
    "source": [
     "collection.labels.add(experimental_factors.cytof, features.assay)\n",
-    "collection.labels.add(organism.human, features.organism)"
+    "collection.labels.add(organisms.human, features.organism)"
    ]
   },
   {
