--- a/docs/tissue.ipynb
+++ b/docs/tissue.ipynb
@@ -41,10 +41,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -203,7 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt = lb.Tissue.bionty()\n",
     "tissue_bt.search(\"alveolus lung\").head(3)"
    ]
   },
@@ -357,7 +353,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
