--- a/docs/disease.ipynb
+++ b/docs/disease.ipynb
@@ -42,10 +42,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -197,7 +194,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt = lb.Disease.bionty()\n",
     "disease_bt.search(\"parkinsons disease\").head(3)"
    ]
   },
@@ -354,7 +350,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
