--- a/docs/experimental_factor.ipynb
+++ b/docs/experimental_factor.ipynb
@@ -41,10 +41,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -196,7 +193,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factor_bt = lb.ExperimentalFactor.bionty()\n",
     "experimental_factor_bt.search(\"single-cell rna seq\").head(3)"
    ]
   },
@@ -339,7 +335,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
