--- a/docs/phenotype.ipynb
+++ b/docs/phenotype.ipynb
@@ -44,10 +44,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -199,7 +196,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_bt = lb.Phenotype.bionty()\n",
     "phenotype_bt.search(\"dysplasia\").head(3)"
    ]
   },
@@ -339,7 +335,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
