🚚 Rename .bionty to .public

--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt = lb.CellMarker.bionty(organism=\"human\")\n",
+    "cell_marker_bt = lb.CellMarker.public(organism=\"human\")\n",
     "cell_marker_bt"
    ]
   },
@@ -377,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"CellMarker\").df()"
+    "lb.PublicSource.filter(entity=\"CellMarker\").df()"
    ]
   },
   {
@@ -393,10 +393,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
-    "cell_marker_bt = lb.CellType(bionty_source=bionty_source)\n",
+    "cell_marker_bt = lb.CellType(public_source=public_source)\n",
     "cell_marker_bt"
    ]
   },
@@ -417,7 +417,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
