--- a/docs/cell_type.ipynb
+++ b/docs/cell_type.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_type_bt = lb.CellType.bionty()\n",
+    "cell_type_bt = lb.CellType.public()\n",
     "cell_type_bt"
    ]
   },
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"CellType\").df()"
+    "lb.PublicSource.filter(entity=\"CellType\").df()"
    ]
   },
   {
@@ -272,10 +272,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"cl\", version=\"2023-04-20\", organism=\"all\"\n",
     ").one()\n",
-    "cell_type_bt = lb.CellType(bionty_source=bionty_source)\n",
+    "cell_type_bt = lb.CellType(public_source=public_source)\n",
     "cell_type_bt"
    ]
   },
@@ -296,7 +296,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
