--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty = lb.CellType.bionty()"
+    "bionty = lb.CellType.public()"
    ]
   },
   {
@@ -540,7 +540,7 @@
    "source": [
     "for name in high_terms_nonval:\n",
     "    if name == \"T cells\":\n",
-    "        record = lb.CellType.from_bionty(name=\"T cell\")\n",
+    "        record = lb.CellType.from_public(name=\"T cell\")\n",
     "        record.add_synonym(name)\n",
     "        record.save()\n",
     "    else:\n",
