--- a/docs/developmental_stage.ipynb
+++ b/docs/developmental_stage.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "developmental_stage_bt = lb.DevelopmentalStage.bionty()\n",
+    "developmental_stage_bt = lb.DevelopmentalStage.public()\n",
     "developmental_stage_bt"
    ]
   },
@@ -289,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"DevelopmentalStage\").df()"
+    "lb.PublicSource.filter(entity=\"DevelopmentalStage\").df()"
    ]
   },
   {
@@ -305,10 +305,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"hsapdv\", version=\"2020-03-10\", organism=\"human\"\n",
     ").one()\n",
-    "developmental_stage_bt = lb.DevelopmentalStage.bionty(bionty_source=bionty_source)\n",
+    "developmental_stage_bt = lb.DevelopmentalStage.public(public_source=public_source)\n",
     "developmental_stage_bt"
    ]
   },
@@ -329,7 +329,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
