--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -173,7 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "bionty = lb.Pathway.bionty()"
+    "bionty = lb.Pathway.public()"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Pathway.from_bionty(ontology_id=\"GO:0015868\")"
+    "lb.Pathway.from_public(ontology_id=\"GO:0015868\")"
    ]
   },
   {
