--- a/docs/ethnicity.ipynb
+++ b/docs/ethnicity.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethnicity_bt = lb.Ethnicity.bionty()\n",
+    "ethnicity_bt = lb.Ethnicity.public()\n",
     "ethnicity_bt"
    ]
   },
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Ethnicity\").df()"
+    "lb.PublicSource.filter(entity=\"Ethnicity\").df()"
    ]
   },
   {
@@ -323,10 +323,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"hancestro\", version=\"3.0\", organism=\"human\"\n",
     ").one()\n",
-    "ethnicity_bt = lb.Ethnicity.bionty(bionty_source=bionty_source)\n",
+    "ethnicity_bt = lb.Ethnicity.public(public_source=public_source)\n",
     "ethnicity_bt"
    ]
   },
@@ -347,7 +347,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
