--- a/docs/experimental_factor.ipynb
+++ b/docs/experimental_factor.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factor_bt = lb.ExperimentalFactor.bionty()\n",
+    "experimental_factor_bt = lb.ExperimentalFactor.public()\n",
     "experimental_factor_bt"
    ]
   },
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"ExperimentalFactor\").df()"
+    "lb.PublicSource.filter(entity=\"ExperimentalFactor\").df()"
    ]
   },
   {
@@ -318,10 +318,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"efo\", version=\"3.48.0\", organism=\"all\"\n",
     ").one()\n",
-    "experimental_factor_bt = lb.ExperimentalFactor.bionty(bionty_source=bionty_source)\n",
+    "experimental_factor_bt = lb.ExperimentalFactor.public(public_source=public_source)\n",
     "experimental_factor_bt"
    ]
   },
@@ -342,7 +342,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
