--- a/docs/organism.ipynb
+++ b/docs/organism.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organism_bt = lb.Organism.bionty()\n",
+    "organism_bt = lb.Organism.public()\n",
     "organism_bt"
    ]
   },
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Organism\").df()"
+    "lb.PublicSource.filter(entity=\"Organism\").df()"
    ]
   },
   {
@@ -298,10 +298,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"vertebrates\"\n",
     ").one()\n",
-    "organism_bt = lb.Organism.bionty(bionty_source=bionty_source)\n",
+    "organism_bt = lb.Organism.public(public_source=public_source)\n",
     "organism_bt"
    ]
   },
@@ -322,7 +322,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
