--- a/docs/tissue.ipynb
+++ b/docs/tissue.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt = lb.Tissue.bionty()\n",
+    "tissue_bt = lb.Tissue.public()\n",
     "tissue_bt"
    ]
   },
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Tissue\").df()"
+    "lb.PublicSource.filter(entity=\"Tissue\").df()"
    ]
   },
   {
@@ -336,10 +336,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"uberon\", version=\"2023-04-19\", organism=\"all\"\n",
     ").one()\n",
-    "tissue_bt = lb.Tissue.bionty(bionty_source=bionty_source)\n",
+    "tissue_bt = lb.Tissue.public(public_source=public_source)\n",
     "tissue_bt"
    ]
   },
@@ -360,7 +360,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
