--- a/docs/cell_line.ipynb
+++ b/docs/cell_line.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_line_bt = lb.CellLine.bionty()\n",
+    "cell_line_bt = lb.CellLine.public()\n",
     "cell_line_bt"
    ]
   },
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"CellLine\").df()"
+    "lb.PublicSource.filter(entity=\"CellLine\").df()"
    ]
   },
   {
@@ -297,10 +297,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"clo\", version=\"2022-03-21\", organism=\"all\"\n",
     ").one()\n",
-    "cell_line_bt = lb.CellLine.bionty(bionty_source=bionty_source)\n",
+    "cell_line_bt = lb.CellLine.public(public_source=public_source)\n",
     "cell_line_bt"
    ]
   },
@@ -321,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
