--- a/docs/disease.ipynb
+++ b/docs/disease.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt = lb.Disease.bionty()\n",
+    "disease_bt = lb.Disease.public()\n",
     "disease_bt"
    ]
   },
@@ -317,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Disease\").df()"
+    "lb.PublicSource.filter(entity=\"Disease\").df()"
    ]
   },
   {
@@ -333,10 +333,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"mondo\", version=\"2023-04-04\", organism=\"all\"\n",
     ").one()\n",
-    "disease_bt = lb.Disease.bionty(bionty_source=bionty_source)\n",
+    "disease_bt = lb.Disease.public(public_source=public_source)\n",
     "disease_bt"
    ]
   },
@@ -357,7 +357,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
