--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.bionty().search(\"FACS\").head(2)  # search the public ontology"
+    "lb.ExperimentalFactor.public().search(\"FACS\").head(2)  # search the public ontology"
    ]
   },
   {
@@ -371,7 +371,7 @@
    "outputs": [],
    "source": [
     "# import the FACS record from the public ontology and save it to the registry\n",
-    "facs = lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\")\n",
+    "facs = lb.ExperimentalFactor.from_public(ontology_id=\"EFO:0009108\")\n",
     "facs.save()"
    ]
   },
