--- a/docs/pathway.ipynb
+++ b/docs/pathway.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bt = lb.Pathway.bionty()\n",
+    "pathway_bt = lb.Pathway.public()\n",
     "pathway_bt"
    ]
   },
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Pathway\").df()"
+    "lb.PublicSource.filter(entity=\"Pathway\").df()"
    ]
   },
   {
@@ -318,10 +318,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"go\", version=\"2023-05-10\", organism=\"all\"\n",
     ").one()\n",
-    "pathway_bt = lb.Pathway.bionty(bionty_source=bionty_source)\n",
+    "pathway_bt = lb.Pathway.public(public_source=public_source)\n",
     "pathway_bt"
    ]
   },
@@ -342,7 +342,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
