--- a/docs/phenotype.ipynb
+++ b/docs/phenotype.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_bt = lb.Phenotype.bionty()\n",
+    "phenotype_bt = lb.Phenotype.public()\n",
     "phenotype_bt"
    ]
   },
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Phenotype\").df()"
+    "lb.PublicSource.filter(entity=\"Phenotype\").df()"
    ]
   },
   {
@@ -318,10 +318,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"hp\", version=\"2023-06-17\", organism=\"human\"\n",
     ").one()\n",
-    "phenotype_bt = lb.Phenotype.bionty(bionty_source=bionty_source)\n",
+    "phenotype_bt = lb.Phenotype.public(public_source=public_source)\n",
     "phenotype_bt"
    ]
   },
@@ -342,7 +342,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
