💚 Fix from_bionty

--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -396,7 +396,7 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
-    "cell_marker_bt = lb.CellType(public_source=public_source)\n",
+    "cell_marker_bt = lb.CellType.public(public_source=public_source)\n",
     "cell_marker_bt"
    ]
   },
