--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt = lb.CellMarker.public(organism=\"human\")\n",
-    "cell_marker_bt"
+    "public = lb.CellMarker.public(organism=\"human\")\n",
+    "public"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cell_marker_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `cell_marker_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = cell_marker_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt.search(\"CD4\").head(5)"
+    "public.search(\"CD4\").head(5)"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt.search(\"CD4\", field=cell_marker_bt.gene_symbol).head(1)"
+    "public.search(\"CD4\", field=public.gene_symbol).head(1)"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt.inspect(markers.index, cell_marker_bt.name);"
+    "public.inspect(markers.index, public.name);"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "synonyms_mapper = cell_marker_bt.standardize(markers.index, return_mapper=True)\n",
+    "synonyms_mapper = public.standardize(markers.index, return_mapper=True)\n",
     "synonyms_mapper"
    ]
   },
@@ -289,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt.inspect(markers.index, cell_marker_bt.name);"
+    "public.inspect(markers.index, public.name);"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = cell_marker_bt.lookup()\n",
+    "lookup = public.lookup()\n",
     "lookup.cd127"
    ]
   },
@@ -338,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt.search(\"CD127a\").head()"
+    "public.search(\"CD127a\").head()"
    ]
   },
   {
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt.validate(curated_df.index, cell_marker_bt.name);"
+    "public.validate(curated_df.index, public.name);"
    ]
   },
   {
@@ -396,8 +396,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
-    "cell_marker_bt = lb.CellType.public(public_source=public_source)\n",
-    "cell_marker_bt"
+    "public = lb.CellMarker.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
