--- a/docs/disease.ipynb
+++ b/docs/disease.ipynb
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt = lb.Disease.public()\n",
-    "disease_bt"
+    "public = lb.Disease.public()\n",
+    "public"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = disease_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `disease_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = disease_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = disease_bt.lookup(disease_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt.search(\"parkinsons disease\").head(3)"
+    "public.search(\"parkinsons disease\").head(3)"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt.search(\"paralysis agitans\").head(3)"
+    "public.search(\"paralysis agitans\").head(3)"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt.search(\"parkinsons disease\", synonyms_field=None).head(3)"
+    "public.search(\"parkinsons disease\", synonyms_field=None).head(3)"
    ]
   },
   {
@@ -242,9 +242,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt.search(\n",
+    "public.search(\n",
     "    \"progressive degenerative disorder of the central nervous system\",\n",
-    "    field=disease_bt.definition,\n",
+    "    field=public.definition,\n",
     ").head()"
    ]
   },
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = disease_bt.validate(df_orig.index, disease_bt.name)\n",
+    "validated = public.validate(df_orig.index, public.name)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -336,8 +336,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"mondo\", version=\"2023-04-04\", organism=\"all\"\n",
     ").one()\n",
-    "disease_bt = lb.Disease.public(public_source=public_source)\n",
-    "disease_bt"
+    "public = lb.Disease.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
