--- a/docs/experimental_factor.ipynb
+++ b/docs/experimental_factor.ipynb
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factor_bt = lb.ExperimentalFactor.public()\n",
-    "experimental_factor_bt"
+    "public = lb.ExperimentalFactor.public()\n",
+    "public"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = experimental_factor_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `experimental_factor_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = experimental_factor_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = experimental_factor_bt.lookup(experimental_factor_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factor_bt.search(\"single-cell rna seq\").head(3)"
+    "public.search(\"single-cell rna seq\").head(3)"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factor_bt.search(\"single-cell RNA-seq\").head(1)"
+    "public.search(\"single-cell RNA-seq\").head(1)"
    ]
   },
   {
@@ -225,9 +225,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factor_bt.search(\n",
+    "public.search(\n",
     "    \"assay which analysis the transcriptome of a biological sample\",\n",
-    "    field=experimental_factor_bt.definition,\n",
+    "    field=public.definition,\n",
     ").head()"
    ]
   },
@@ -276,9 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = experimental_factor_bt.validate(\n",
-    "    df_orig.index, experimental_factor_bt.ontology_id\n",
-    ")\n",
+    "validated = public.validate(df_orig.index, public.ontology_id)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -321,8 +319,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"efo\", version=\"3.48.0\", organism=\"all\"\n",
     ").one()\n",
-    "experimental_factor_bt = lb.ExperimentalFactor.public(public_source=public_source)\n",
-    "experimental_factor_bt"
+    "public = lb.ExperimentalFactor.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
