--- a/docs/organism.ipynb
+++ b/docs/organism.ipynb
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organism_bt = lb.Organism.public()\n",
-    "organism_bt"
+    "public = lb.Organism.public()\n",
+    "public"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = organism_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `organism_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = organism_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = organism_bt.lookup(organism_bt.scientific_name)"
+    "lookup = public.lookup(public.scientific_name)"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organism_bt.search(\"rabbit\").head(1)"
+    "public.search(\"rabbit\").head(1)"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organism_bt.search(\"sapiens\", field=organism_bt.scientific_name).head(2)"
+    "public.search(\"sapiens\", field=public.scientific_name).head(2)"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = organism_bt.validate(df_orig.index, organism_bt.name)\n",
+    "validated = public.validate(df_orig.index, public.name)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -301,8 +301,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"vertebrates\"\n",
     ").one()\n",
-    "organism_bt = lb.Organism.public(public_source=public_source)\n",
-    "organism_bt"
+    "public = lb.Organism.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
