--- a/docs/pathway.ipynb
+++ b/docs/pathway.ipynb
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bt = lb.Pathway.public()\n",
-    "pathway_bt"
+    "public = lb.Pathway.public()\n",
+    "public"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pathway_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `pathway_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = pathway_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = pathway_bt.lookup(pathway_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bt.search(\"acetyl coa assimilation\").head(3)"
+    "public.search(\"acetyl coa assimilation\").head(3)"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bt.search(\"acetyl-CoA catabolism\").head(1)"
+    "public.search(\"acetyl-CoA catabolism\").head(1)"
    ]
   },
   {
@@ -226,10 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bt.search(\n",
+    "public.search(\n",
     "    \"Chemical reactions and pathways resulting in the breakdown of Cinnamic Acid,\"\n",
     "    \" 3-Phenyl-2-Propenoic Acid.\",\n",
-    "    field=pathway_bt.definition,\n",
+    "    field=public.definition,\n",
     ").head()"
    ]
   },
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = pathway_bt.validate(df_orig.index, pathway_bt.ontology_id)\n",
+    "validated = public.validate(df_orig.index, public.ontology_id)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -321,8 +321,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"go\", version=\"2023-05-10\", organism=\"all\"\n",
     ").one()\n",
-    "pathway_bt = lb.Pathway.public(public_source=public_source)\n",
-    "pathway_bt"
+    "public = lb.Pathway.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
