--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin load use-cases-registries"
+    "!lamin init --storage ./use-cases-registries --schema bionty"
    ]
   },
   {
