--- a/docs/cell_type.ipynb
+++ b/docs/cell_type.ipynb
@@ -273,7 +273,7 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"cl\", version=\"2023-04-20\", organism=\"all\"\n",
     ").one()\n",
-    "public = lb.CellType(public_source=public_source)\n",
+    "public = lb.CellType.public(public_source=public_source)\n",
     "public"
    ]
   },
