--- a/docs/cell_type.ipynb
+++ b/docs/cell_type.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
